@@ -93,6 +93,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
     SNF:
       Fix packet filtering with low snaplen.
       Require SNF_VERSION_API >= 0x0003.
+      Improve device descriptions and flags.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.6 libpcap release (so far!)
